# quantforge

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  INTEGRATION_TEST_REPORT.md  OPTIMIZATION_REPORT_OBSERVABILITY.md  OPTIMIZATION_REPORT_qf_data_qf_database.md  OPTIMIZATION_REPORT_qf_reliability.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_V2_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  README.md  SECURITY_REPORT.md  benchmark.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  requirements.txt  run_tests.py  start.bat  start.sh
config/: config.example.yaml
config/environments/: development.yaml  production.yaml
examples/: okx_basis_arbitrage.py
modules/qf-backtest/: .coverage  LICENSE  README.md  pyproject.toml
modules/qf-backtest/src/qf_backtest/: __init__.py  commission.py  engine.py  metrics.py  optimization.py  slippage.py
modules/qf-backtest/tests/: test_backtest.py
modules/qf-core/: config_manager.py
modules/qf-data/: .coverage  README.md  pyproject.toml
modules/qf-data/examples/: basic_usage.py
modules/qf-data/src/qf_data/: __init__.py  base.py  cleaner.py  collector.py  exceptions.py  types.py
modules/qf-data/src/qf_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
modules/qf-data/src/qf_data/exchanges/: __init__.py  binance.py  cnstock.py  ctp.py  okx.py  okx_secure.py
modules/qf-data/tests/: test_collector.py  test_performance_advanced.py
modules/qf-database/: .gitignore  README.md  pyproject.toml
modules/qf-database/src/qf_database/: __init__.py  database_manager.py  influxdb_manager.py  models.py  mysql_manager.py  redis_manager.py  secure_manager.py
modules/qf-database/tests/: test_coverage.py  test_database.py  test_edge_cases.py  test_extended.py  test_final.py  test_more_edge_cases.py  test_performance.py
modules/qf-execution/: .gitignore  README.md  pyproject.toml
modules/qf-execution/src/qf_execution/: __init__.py  batch_processor.py  connection_pool.py  engine.py  models.py  order_manager.py  routing.py  secure_engine.py  splitter.py
modules/qf-execution/tests/: test_batch_additional.py  test_concurrent.py  test_execution.py
modules/qf-monitor/: .gitignore  README.md  pyproject.toml
modules/qf-monitor/src/qf_monitor/: __init__.py  alerts.py  batch_processor.py  checks.py  monitor.py
modules/qf-monitor/src/qf_monitor/notifiers/: __init__.py  dingtalk.py  email.py  wechat.py
modules/qf-monitor/tests/: test_monitor.py  test_notifiers.py
modules/qf-observability/: README.md  pyproject.toml
modules/qf-observability/config/: prometheus.yml
modules/qf-observability/examples/: basic_usage.py
modules/qf-observability/src/qf_observability/: __init__.py
modules/qf-observability/src/qf_observability/logging/: __init__.py  json_logger.py  masking.py
modules/qf-observability/src/qf_observability/metrics/: __init__.py  business.py  collector.py  prometheus.py  system.py
modules/qf-observability/src/qf_observability/profiling/: __init__.py  async_monitor.py  memory.py  performance.py
modules/qf-observability/src/qf_observability/tracing/: __init__.py  context.py  middleware.py  opentelemetry.py
modules/qf-observability/tests/test_logging/: test_json_logger.py
modules/qf-observability/tests/test_metrics/: test_collector.py
modules/qf-observability/tests/test_profiling/: test_performance.py
modules/qf-observability/tests/test_tracing/: test_opentelemetry.py
modules/qf-portfolio/: .coverage  README.md  pyproject.toml
modules/qf-portfolio/src/qf_portfolio/: __init__.py  allocator.py  kelly.py  ml_weights.py  risk_parity.py  volatility_target.py
modules/qf-portfolio/src/qf_portfolio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
modules/qf-portfolio/tests/: test_portfolio.py
modules/qf-reliability/: README.md  pyproject.toml
modules/qf-reliability/src/qf_reliability/: __init__.py  chaos.py  circuit_breaker.py  fallback.py  health_check.py  retry.py
modules/qf-reliability/tests/: __init__.py  test_chaos.py  test_circuit_breaker.py  test_fallback.py  test_health_check.py  test_integration.py  test_retry.py
modules/qf-risk/: .coverage  README.md  pyproject.toml
modules/qf-risk/src/qf_risk/: __init__.py  anomaly.py  circuit_breaker.py  limits.py  manager.py  stop_loss.py  var.py
modules/qf-risk/src/qf_risk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
modules/qf-risk/tests/: test_risk.py
modules/qf-security/: README.md  pyproject.toml  vault_integration.py
modules/qf-security/examples/: usage_example.py
modules/qf-security/src/qf_security/: __init__.py  access_control.py  audit.py  encryption.py  exceptions.py  integration.py  masking.py  setup.py
modules/qf-security/tests/: test_security.py
modules/qf-strategy/: .gitignore  README.md  pyproject.toml
modules/qf-strategy/src/qf_strategy/: __init__.py  base.py  basis_arbitrage.py  calendar_spread.py  dual_ma.py
modules/qf-strategy/tests/: test_strategy.py
scripts/: deploy.sh  test_okx_connection.py
tests/: test_performance.py
tests/chaos/: chaos_monkey.py  experiments.json
tests/stress/: stress_test.py
