[project]
name = "qf-monitor"
version = "0.1.0"
description = "QuantForge Monitoring and Alerting Module"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "prometheus-client>=0.17.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "responses>=0.23.0",
    "freezegun>=1.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=qf_monitor --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/qf_monitor"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
