[project]
name = "qf-observability"
version = "1.0.0"
description = "QuantForge Observability Module - 可观测性模块"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "psutil>=5.9.0",
    "py-spy>=0.3.14",
    "objgraph>=3.5.0",
    "python-json-logger>=2.0.7",
    "contextvars>=2.4",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=qf_observability --cov-report=term-missing"

[tool.coverage.run]
source = ["src/qf_observability"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
