[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qf-security"
version = "1.0.0"
description = "QuantForge Security Module - API密钥加密、访问控制、审计日志"
authors = [
    {name = "QuantForge Team"}
]
dependencies = [
    "cryptography>=41.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qf_security"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
